# libsystemd

./: .gitignore  Changelog.md  LICENSE  default.nix  libsystemd.cabal
src/Systemd/Internal/: Journal.hsc
src/Systemd/Wrapper/: Journal.hs
