name:                libsystemd
version:             1.0.0
synopsis:            Haskell bindings to libsystemd
homepage:            http://github.com/dharaj/libsystemd
license:             BSD3
license-file:        LICENSE
author:              Daniel Haraj
maintainer:          daniel.haraj@skedge.me
copyright: SkedgeMe (c) 2014
category:            System
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  Changelog.md

library
  exposed-modules:     Systemd.Internal.Journal
                       Systemd.Wrapper.Journal
  build-depends:       base >=4.7 && <4.8
                     , bytestring >= 0.9.1
                     , unix-bytestring >= 0.3.2 && < 0.4
                     -- , vector >= 0.4 && < 0.11
                     -- , uuid
                     -- , unordered-containers >= 0.1 && < 0.3
                     -- , hashable >= 1.1.2.5
                     -- , hsyslog
                     -- , uniplate >= 1.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries: systemd
  ghc-options: -Wall
  build-tools: hsc2hs
